--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^17.0.34",
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.7.0",
     "body-parser": "^1.20.0",
@@ -22,6 +23,9 @@
     "graphql-server-express": "^1.4.1",
     "graphql-tool": "^1.0.0",
     "graphql-tools": "^8.2.9",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.19.0",
     "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
