--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "start": "ts-node src/index.ts",
+    "start": "nodemon --exec ts-node src/index.ts",
     "prebuild1": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build"
@@ -17,19 +17,24 @@
     "@types/node": "^17.0.34",
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.7.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql-server-express": "^1.4.1",
     "graphql-tool": "^1.0.0",
     "graphql-tools": "^8.2.9",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
-    "subscriptions-transport-ws": "^0.11.0"
+    "subscriptions-transport-ws": "^0.11.0",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@graphql-tools/schema": "^8.3.11",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
     "@typescript-eslint/parser": "^5.24.0",
     "babel-cli": "^6.26.0",
