--- a/package.json
+++ b/package.json
@@ -14,33 +14,37 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^17.0.34",
-    "apollo-server-core": "^3.7.0",
+    "apollo-server-core": "^3.8.1",
     "apollo-server-express": "^3.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
+    "graphql": "^16.5.0",
     "graphql-server-express": "^1.4.1",
     "graphql-tool": "^1.0.0",
     "graphql-tools": "^8.2.9",
+    "graphql-upload": "14.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
+    "stream": "^0.0.2",
     "subscriptions-transport-ws": "^0.11.0",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.1.0",
     "@graphql-tools/schema": "^8.3.11",
     "@types/bcryptjs": "^2.4.2",
+    "@types/graphql-upload": "^8.0.11",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
     "@typescript-eslint/parser": "^5.24.0",
     "babel-cli": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "eslint": "^8.15.0",
-    "graphql": "^16.5.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
