--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "apollo-server-express": "^3.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.5.0",
