--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
+    "slugify": "^1.6.5",
     "stream": "^0.0.2",
     "subscriptions-transport-ws": "^0.11.0",
     "type-graphql": "^1.1.1"
